[tool.poetry]
name = "cigri"
version = "4.0.0"
description = "CiGri in Python"
authors = ["Diego CORREIA DE OLIVEIRA <Diego.cdo27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
SQLAlchemy = "2.0"
fastapi = "^0.109.0"
rich-click = "^1.7.3"
uvicorn = {extras = ["standard"], version = "^0.28.0"}

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pre-commit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
